--- a/servlets-html-hashmap-login/pom.xml
+++ b/servlets-html-hashmap-login/pom.xml
@@ -25,10 +25,19 @@
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
-					<version>8.0.0.M3</version>
 					<configuration>
 						<scanIntervalSeconds>10</scanIntervalSeconds>
-						<contextPath>/</contextPath>
+						<webApp>
+							<contextPath>/${project.artifactId}</contextPath>
+						</webApp>
+						
+						<contextHandlers>
+							<contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext">
+								<war>${basedir}/../servlets-basics/target/servlets-basics.war</war>
+								<contextPath>/servlets-basics</contextPath>
+							</contextHandler>
+						</contextHandlers>
+						
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<stopKey>STOP</stopKey>
 						<stopPort>8005</stopPort>
